# mad_icp_core

./: CMakeLists.txt  ReadMe.md  package.xml
include/mad_icp_core/: constants.hpp  frame.hpp  lie_algebra.hpp  mad_icp.hpp  mad_tree.hpp  pipeline.hpp  utils.hpp  vel_estimator.hpp
src/: mad_icp.cpp  mad_tree.cpp  pipeline.cpp  vel_estimator.cpp
